- Actioneer Business Clothes' integrated holster is now properly a concealable holster.
- PI-Tac Programs can now be filtered for when buying new gear.
- Added Shadows in Focus: Butte version of Dug a Hole.
- Removed the Delnar Skills Remake (Lite) custom dataset because it cannot properly be implemented in Chummer at its current time.
- Morgan Cutlass' page reference is now properly p. 464.

Changed/New Strings:
- LimitCondition_SkillsActiveLeadership
- Checkbox_Options_AllowHoverIncrement
- Checkbox_Options_InsertPdfNotesIfAvailable
- Label_Options_MaximumMartialArts
- Label_Options_MaximumMartialTechniques
- String_MasteryPointsAcronym
- Label_BonusLP
- Message_DuplicateFile
- MessageTitle_DuplicateFile
- Message_SelectGeneric_HaveAttributeEnabled
- String_ComplexFormTargetIcon
- Rating_SqMeters
- Label_SelectMentorSpirit_Disadvantage
- Label_SelectMentorSpirit_Choices
- String_DamageFire
- Message_DeleteArmorMod
- Message_DeleteWeaponAccessory
- String_ExpensePurchaseVehicleWeaponMount
- String_ExpenseSoldVehicleWeaponMount
- Label_Options_Carryover_Nuyen
- Label_Options_Carryover_Karma
- Node_UnequippedModularBioware
- String_MinimumAttribute
- String_MaximumAttribute
- String_Fastest_Option
- String_Ultra_Option
- Message_File_Incorrect_Format
- Tip_Power_PPperLevel
- Tip_Power_Capped
- Label_SelectAdvancedLifestyle_Tenant
- String_NotSupported
- Message_MetatypeNotSupported
- Message_UndoExpenseNotSupported

Removed Strings:
- Label_SelectMetamagic_Disadvantage
- Label_Options_Carryover

Build 225
Application Changes:
- Added the ability to re-apply the improvements of individual items instead of only for the entire character all at once. Implements #4628.
- Attempting to reassign or reapply priorities or metatypes that give access to special attributes and/or skills linked to special attributes no longer causes Chummer to crash.
- Fixed some rare bugs and crashes that could occur when writing to a file that Chummer was simultaneously attempting to read in.